Tweaked for mobile

--- a/_posts/2017-03-12-welcome.md
+++ b/_posts/2017-03-12-welcome.md
@@ -2,10 +2,10 @@
 date: 2017-03-12
 excerpt: Welcome to CodingHobby!
 layout: post
+author: Corrado Canepari
 ---
 
-<p class="title">Welcome to CodingHobby!</p>
-<br>
+
 This website was conceived as a crossover between a tech blog and a tutorial website.
 It is not meant to be a place where I can just ramble about JavaScript frameworks, but actually give some helpful information about them, as well.
 
