Added Jekyll Awesomeness

--- a/_posts/2017-03-12-welcome.md
+++ b/_posts/2017-03-12-welcome.md
@@ -3,9 +3,10 @@ date: 2017-03-12
 excerpt: Welcome to CodingHobby!
 layout: post
 author: Corrado Canepari
+title: Welcome
 ---
 
-
+<p class="title">{{ page.excerpt }}</p>
 This website was conceived as a crossover between a tech blog and a tutorial website.
 It is not meant to be a place where I can just ramble about JavaScript frameworks, but actually give some helpful information about them, as well.
 
