--- a/_posts/2017-03-12-welcome.md
+++ b/_posts/2017-03-12-welcome.md
@@ -4,6 +4,7 @@ excerpt: Welcome to CodingHobby!
 layout: post
 author: Corrado Canepari
 title: Welcome
+categories: meta
 ---
 
 <p class="title">{{ page.excerpt }}</p>
