Spelling and grammar fixes.

--- a/_drafts/2017-3-23-hw-1.md
+++ b/_drafts/2017-3-23-hw-1.md
@@ -8,14 +8,14 @@ categories: "HelloWorld"
 ---
 
 # Hello, World!
-As a beginner programmer, you often find it hard to start. Everything seems too complicated, and it looks like you have to be a genious to understand. Fear no more, for "Hello, World" is here.
+As a beginner programmer, you often find it hard to start. Everything seems too complicated, and it looks like you have to be a genius to understand. Fear no more, for "Hello, World" is here.
 
 Hello World is an episodical series of articles, in which I will be introducing you to the main concepts of programming.
 
 # What is programming?
 ---
 
-Programming is the practice, or rather the art, of creating software. It consist in writing instructions your computer can understand to make it do **awesome stuff**.
+Programming is the practice, or rather the art, of creating software. It consists of writing instructions your computer can understand to make it do **awesome stuff**.
 
 The main purpose of programming is to be able to **Hack while K.I.S.S.ing**.
 
@@ -26,22 +26,22 @@ Let's talk a bit about those two terms.
 
 While many consider hacking as a malicious action, which has as a goal "breaking into someone else's computer" or "stealing money", the term has a vastly different meaning: It basically means **to do something yourself**.
 
-It is the art to build any tool you need from scratch, or making tools others created better, and those should be your ultimate goals.
+It is the art of building any tool you need from scratch, or making tools others created better, and those should be your ultimate goals.
 
 # K.I.S.S.ing
 ---
 
 K.I.S.S, in programming, is an acronym which stands for **K**eep **I**t **S**imple **S**tupid.
 
-It means that what you make should not be an overly complicated assemble of junk, but it should be an easy to understand piece of code, which can be easily modified and tweaked to some other Hacker's likings.
+It means that what you make should not be an overly complicated assemblage of junk, but it should be an easy-to-understand piece of code, which can be easily modified and tweaked to some other Hacker's liking.
 
 # About JavaScript
 ---
 
-During this course we'll be talking about JavaScript, which is a language which you can use for both your Browser and your Server. It has been developing quite fast in the last few years and, for that reason, many cutting-edge technologies use it.
+During this course we'll be talking about JavaScript, which is a language you can use for both your Browser and your Server. It has been developing quite fast in the last few years, and, for that reason, many cutting-edge technologies use it.
 
-JavaScript is a **dinamically typed** language, which means that you do not have to declare what pieces of data are going to be. Types will still be a thing, but the JS "compiler" will take care of them. It will, in facts, automatically label the data you pass it as either a Number or a Character or any other type of data, and it will automatically convert it from one type to another when needed.
+JavaScript is a **dynamically typed** language, which means that you do not have to declare what type your pieces of data are going to be. Types will still be a thing, but the JS "compiler" will take care of them. It will, in fact, automatically label the data you pass it as either a Number or a Character or any other type of data, and it will automatically convert it from one type to another when needed.
 
-If you want to learn more abuot the origins of JavaScript, you'll soon be able to read about them in the upcoming Scheme article.
+If you want to learn more about the origins of JavaScript, you'll soon be able to read about them in the upcoming Scheme article.
 
 # How to follow this course
