--- a/_posts/2017-3-23-hw-1.md
+++ b/_posts/2017-3-23-hw-1.md
@@ -4,15 +4,19 @@ excerpt: Hello, World!
 layout: post
 author: Corrado Canepari
 title: Intro to programming
-categories: "HelloWorld"
+categories: HelloWorld
 ---
 
-# Hello, World!
+# Hello, world!
+
+---
+
 As a beginner programmer, you often find it hard to start. Everything seems too complicated, and it looks like you have to be a genius to understand. Fear no more, for "Hello, World" is here.
 
 Hello World is an episodical series of articles, in which I will be introducing you to the main concepts of programming.
 
-# What is programming?
+## What is programming?
+
 ---
 
 Programming is the practice, or rather the art, of creating software. It consists of writing instructions your computer can understand to make it do **awesome stuff**.
@@ -21,21 +25,24 @@ The main purpose of programming is to be able to **Hack while K.I.S.S.ing**.
 
 Let's talk a bit about those two terms.
 
-# Hacking
+## Hacking
+
 ---
 
 While many consider hacking as a malicious action, which has as a goal "breaking into someone else's computer" or "stealing money", the term has a vastly different meaning: It basically means **to do something yourself**.
 
 It is the art of building any tool you need from scratch, or making tools others created better, and those should be your ultimate goals.
 
-# K.I.S.S.ing
+## K.I.S.S.ing
+
 ---
 
 K.I.S.S, in programming, is an acronym which stands for **K**eep **I**t **S**imple **S**tupid.
 
 It means that what you make should not be an overly complicated assemblage of junk, but it should be an easy-to-understand piece of code, which can be easily modified and tweaked to some other Hacker's liking.
 
-# About JavaScript
+## About JavaScript
+
 ---
 
 During this course we'll be talking about JavaScript, which is a language you can use for both your Browser and your Server. It has been developing quite fast in the last few years, and, for that reason, many cutting-edge technologies use it.
@@ -44,4 +51,10 @@ JavaScript is a **dynamically typed** language, which means that you do not have
 
 If you want to learn more about the origins of JavaScript, you'll soon be able to read about them in the upcoming Scheme article.
 
-# How to follow this course
+## How to follow this course
+
+---
+
+If you want to follow along, there are a few ways to do so.
+
+From the next article on, we'll be talking about JS in the browser, so you won't need any additional programs, although we'll be touching on how to use Node.js for server side programming, sometime in the future, so you'll need to eventually install [node.js](https://www.nodejs.org)
