Added Hello World 3

--- a/_posts/2017-03-12-welcome.md
+++ b/_posts/2017-03-12-welcome.md
@@ -11,6 +11,8 @@ categories: meta
 This website was conceived as a crossover between a tech blog and a tutorial website.
 It is not meant to be a place where I can just ramble about JavaScript frameworks, but actually give some helpful information about them, as well.
 
-As I already said in the ```about``` section, this website uses Jekyll to generate a static website.
+The main series of article I am writing at the moment is called [Hello World](https://codinghobby.github.io/helloworld/2017/03/23/hello-world-1.html), where I start from the very basics of JavaScript to get to more advanced stuff. 
 
-This is also going to be the argoument of the first article I'll be posting (hopefully coming soon).
+Thanks to another contributor, Dylan LaCoursiere, there is also an [article](https://codinghobby.github.io/history/2017/03/25/js-history.html) on the history of the JavaScript language.
+
+I also wrote an article on using [Jekyll](https://www.jekyllrb.com), which is the technology I used to make this site!
